[metadata]
name=py-bes
version=0.1.0.dev
description=A Python client for accessing the Building Energy Score API
author=Paul Munday
author_email=paul@paulmunday.net
keywords= bes
classifiers =
	Development Status ::
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	requests==2.13.0
[options.packages.find]
exclude =
    tests
    docs
    requirements
[bdist_wheel]
universal = 1