[metadata]
name=py-bes
version=0.2.3
description=A Python client for accessing the Building Energy Asset Score API
author=Paul Munday, Fable Turas
author_email=paul@paulmunday.net, fable@raintechpdx.com
maintainer=GreenBuildingRegistry
maintainer_email=admin@greenbuildingregistry.com
url=https://github.com/GreenBuildingRegistry/py-bes
keywords= bes, doe, asset score
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	frozendict>=1.2
	typing==3.6.1
	requests==2.13.0
[bdist_wheel]
universal = 1
